# project-mmm

./: README.md  optimization_debug.txt  optimization_log.txt  pyproject.toml
data/bronze/: beauty_brand_mmm.csv
data/gold/: beauty_brand_mmm_features.parquet  beauty_brand_mmm_features_weekly.parquet
data/models/: calibrated_summary.csv  calibrated_trace.nc  experiment_results.json  mmm_trace.nc  model_summary.csv
data/silver/: beauty_brand_mmm.parquet
reports/: budget_optimization_recommendations.md  project_journey_log.md
src/data_engineering/: generate_synthetic_data.py  process_gold.py  process_silver.py
src/modeling/: budget_optimizer.py  calibrate_model.py  simulate_geo_experiment.py  train_model.py
